[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-web-wasm-client = "0.3"
tokio = "1.23.0"
tonic = { version = "0.8.3", default-features = false, features = [
    "prost",
    "codegen",
] }
prost = {version = "0.11", features = ["prost-derive"]}
prost-types = "0.11"
yew = {version="0.20.0", features=["csr"]}
wasm-bindgen = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
base64 = "0.21"
unicode-segmentation = "1.10"

[build-dependencies]
tonic-build = { version = "0.8.3", default-features = false, features = [
    "prost",
] }


[dev-dependencies]
wasm-bindgen-test = "0.3.33"